# HALCYON-Foundry-

./: README.md  create_test_queries.sql
halcyon-full/: ARCHITECTURE.md  AUTH_README.md  CHANGELOG.md  PHASE2_COMPLETION_CHECK.md  PHASE2_GUARDRAILS.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE3_STATUS.md  PHASE5_COMPLETION.md  PHASE6A_SMOKE_TEST.md  PHASE6A_SMOKE_TEST_RESULTS.md  PR4A_SUMMARY.md  PRD.md  RELEASE_NOTES_v6c.md  RELEASE_v4a-cases-ownership.md  SMOKE_TEST_RESULTS.md  STYLEGUIDE.md  create_test_alert_enrichment.sql  smoke_test_alerts.sh  test_alert_all_enrichment.sql  test_alerts.py  (+6 more)
halcyon-full/core/gateway/: .env.example  Dockerfile  pyproject.toml
halcyon-full/core/gateway/app/: actions.py  auth.py  autorun.py  clients.py  config.py  db.py  er.py  federation.py  health.py  logging.py  main.py  metrics.py  middleware.py  ml_feedback.py  ml_scoring.py  ml_weights.py  models.py  models_cases.py  repo_actions.py  repo_alerts.py  repo_bindings.py  repo_cases.py  repo_datasources.py  repo_feedback.py  repo_suppress.py  resolvers.py  resolvers_actions.py  resolvers_alerts.py  resolvers_bindings.py  resolvers_cases.py  resolvers_datasources.py  resolvers_fed.py  resolvers_feedback.py  resolvers_saved.py  retry_worker.py  routes_actions.py  routes_alerts.py  routes_bindings.py  routes_cases.py  routes_datasources.py  (+11 more)
halcyon-full/core/gateway/app/migrations/: 004_saved_dashboards.sql  005_add_shape_hint.sql  007_alerts_enhancements.sql  011_cases_ml.sql  011a_alert_actions_log_patch.sql  012_ml_feedback_log.sql  013_ml_weights.sql  017_playbook_bindings.sql  018_dashboard_defaults.sql  019_datasource_core.sql
halcyon-full/core/gateway/tests/: test_cases_ml_integration.py  test_ml_scoring.py
halcyon-full/core/ontology/: .env.example  Dockerfile  pyproject.toml
halcyon-full/core/ontology/app/: config.py  er.py  health.py  logging.py  main.py  metrics.py  models.py  routes.py  state.py  store.py  tracing.py
halcyon-full/core/ontology/db/: init.sql
halcyon-full/core/registry/: .env.example  Dockerfile  pyproject.toml
halcyon-full/core/registry/app/: cache.py  datasource_manager.py  db.py  health.py  logging.py  main.py  metrics.py  routes_datasources.py  secret_store.py  tracing.py
halcyon-full/core/registry/app/sdk/: __init__.py  base.py  http_poller.py  kafka_consumer.py  webhook.py
(+215 files in other folders)
