[project]
name = "halcyon-ontology"
version = "0.1.0"
description = "HALCYON Foundry — Ontology & Metadata Core"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "neo4j>=5.23.0",
  "orjson>=3.10.7",
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8080
