[project]
name = "halcyon-registry"
version = "0.1.0"
description = "HALCYON Foundry — Plugin Registry"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "watchfiles>=0.22.0",
]
